@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+6/19/25: Fixed getting all names from Thermo autoloader panel, broken
+6/2/25 (In 4.2).
+
 6/19/25: Fixed crash from error opening column valves during Navigator
 Acquire at Items (In 4.2).
 
